complete responsive design

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-.contact_load input:focus {
-    border-color: #00df9a; /* Change this to the desired color */
-  }
+*{
+  padding: auto;
+  margin: auto;
+}
   
