--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 *{
-  padding: auto;
-  margin: auto;
+  padding: 0;
+  margin: 0;
+  overflow: auto;
+  font-family: "Raleway", sans-serif;
 }
-  
+
