--- a/src/myComponent/Additional.css
+++ b/src/myComponent/Additional.css
@@ -117,6 +117,56 @@ video {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
   filter: brightness(1.1);
 }
+
+/* Preloader.css */
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
+  z-index: 9999;
+  overflow: hidden;
+  transition: opacity 1s ease-in-out;
+}
+
+.text-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text {
+  position: absolute;
+  color: white;
+  font-size: 3rem;
+  opacity: 0;
+  animation: appearText .5s forwards;
+}
+
+@keyframes appearText {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+
 @keyframes tada {
   0% { transform: scale3d(1, 1, 1); }
   10%, 20% { transform: scale3d(0.9, 0.9, 0.9) rotate3d(0, 0, 1, -3deg); }
